# SuperAI_LLM_FineTune

./: Dockerfile  README.md  pyproject.toml  smultinode.sh  smultinode_apptainer.sh  submit_multinode.sh  submit_multinode_apptainer.sh  submit_zero_to_fp32.sh
example/: sample_data.json  sample_eval_data.json  sample_train_data.json
scripts/: smultinode.sh  submit_multinode.sh  submit_zero_to_fp32.sh  train.py
scripts/deepspeed_config/: deepspeed_2.json  deepspeed_3.json
src/llm_finetune/: constant.py  data_collator.py  dataset.py  tokenize.py
src/llm_pretraining/: arguments.py  utils.py
